--- a/RightSolutions4u/RightSolutions4u/Views/Home/Index.cshtml
+++ b/RightSolutions4u/RightSolutions4u/Views/Home/Index.cshtml
@@ -14,13 +14,12 @@
                 <div class="col-md-6 banner_bottom_left">
                     <h4>Working to build a better web design</h4>
                     <p>
-                        Pellentesque convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra pharetra sem, eget
-                        pulvinar neque pharetra ac.
+                        We believe in working together, share your Ideas, we’ll bring right solutions for you.
                     </p>
-                    <p>
-                        Lorem Ipsum convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra pharetra sem, eget
-                        pulvinar neque pharetra ac.
-                    </p>
+                    @*<p>
+                            Lorem Ipsum convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra pharetra sem, eget
+                            pulvinar neque pharetra ac.
+                        </p>*@
                     <div class="ab_button">
                         <a class="btn btn-primary btn-lg hvr-underline-from-left" href="single.html" role="button">Read More </a>
                     </div>
@@ -38,8 +37,8 @@
                             </div>
                         </div>
                         <div class="col-xs-9 banner_bottom_grid_right">
-                            <h4>Digital Solutions</h4>
-                            <p>Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+                            <h4>Web Applications</h4>
+                            <p>We develop from simplest presentation websites to full-fledged web application. Present us with your unique needs. A personalized web solution is tailored to the way your business works and can thus improve every aspect of it, from efficiency to turnover.</p>
 
                         </div>
                         <div class="clearfix"> </div>
@@ -55,8 +54,8 @@
                             </div>
                         </div>
                         <div class="col-xs-9 banner_bottom_grid_right">
-                            <h4>Live Website Builder</h4>
-                            <p>Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+                            <h4>Mobile Apps</h4>
+                            <p>we create commercial grade apps for Android that can further your company’s multi-platform, multi-device strategy. Rightsotutions4u offers full life cycle Android development services including mobile architecture, development, testing, deployment and maintenance.</p>
 
                         </div>
                         <div class="clearfix"> </div>
@@ -72,8 +71,8 @@
                             </div>
                         </div>
                         <div class="col-xs-9 banner_bottom_grid_right">
-                            <h4>Creative Strategy</h4>
-                            <p>Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+                            <h4>Application Testing</h4>
+                            <p>We specialize in Software Development Life Cycle (SDLC-Agile & Waterfall), involved in every phase of (SDLC): requirements gathering, data analyzing, system designing, coding, testing: system, unit, System Integration (SIT) and User Acceptance testing (UAT). We write for you the test cases, test plans, RTM and generating test scripts. Provide manual, automated, performance/load testing using top-notch tools, defect tracking & reporting and many more.</p>
 
                         </div>
                         <div class="clearfix"> </div>
@@ -298,78 +297,78 @@
 
 <!--//projects-->
 <!--/blog-->
-<div class="blog_sec">
-    <h3 class="tittle-w3ls">Latest Blogs</h3>
-    <div class="col-md-6 banner-btm-left">
-        <div class="banner-btm-top">
-            <div class="banner-btm-inner a1">
-                <div class="blog_date">
+@*<div class="blog_sec">
+        <h3 class="tittle-w3ls">Latest Blogs</h3>
+        <div class="col-md-6 banner-btm-left">
+            <div class="banner-btm-top">
+                <div class="banner-btm-inner a1">
+                    <div class="blog_date">
 
-                    <h4>Jan.05.2018</h4>
+                        <h4>Jan.05.2018</h4>
+
+                    </div>
+                    <h6><a href="single.html">Strategic Planning</a></h6>
+                    <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
+                    <div class="clearfix"></div>
+                    <a href="single.html" class="blog-btn">Know More</a>
+                </div>
+                <div class="banner-btm-inner a2">
 
                 </div>
-                <h6><a href="single.html">Strategic Planning</a></h6>
-                <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
-                <div class="clearfix"></div>
-                <a href="single.html" class="blog-btn">Know More</a>
             </div>
-            <div class="banner-btm-inner a2">
-
-            </div>
-        </div>
-        <div class="banner-btm-bottom">
-            <div class="banner-btm-inner a3">
-
-            </div>
-            <div class="banner-btm-inner a4">
-                <div class="blog_date">
-
-                    <h4>Jan.08.2018</h4>
+            <div class="banner-btm-bottom">
+                <div class="banner-btm-inner a3">
 
                 </div>
-                <h6><a href="single.html">Strategic Planning</a></h6>
-                <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
-                <div class="clearfix"></div>
-                <a href="single.html" class="blog-btn">Know More</a>
+                <div class="banner-btm-inner a4">
+                    <div class="blog_date">
+
+                        <h4>Jan.08.2018</h4>
+
+                    </div>
+                    <h6><a href="single.html">Strategic Planning</a></h6>
+                    <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
+                    <div class="clearfix"></div>
+                    <a href="single.html" class="blog-btn">Know More</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-6 banner-btm-left">
-        <div class="banner-btm-top">
-            <div class="banner-btm-inner a1">
-                <div class="blog_date">
+        <div class="col-md-6 banner-btm-left">
+            <div class="banner-btm-top">
+                <div class="banner-btm-inner a1">
+                    <div class="blog_date">
 
-                    <h4>Jan.25.2018</h4>
+                        <h4>Jan.25.2018</h4>
+
+                    </div>
+                    <h6><a href="single.html">Strategic Planning</a></h6>
+                    <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
+                    <div class="clearfix"></div>
+                    <a href="single.html" class="blog-btn">Know More</a>
+                </div>
+                <div class="banner-btm-inner a5">
 
                 </div>
-                <h6><a href="single.html">Strategic Planning</a></h6>
-                <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
-                <div class="clearfix"></div>
-                <a href="single.html" class="blog-btn">Know More</a>
             </div>
-            <div class="banner-btm-inner a5">
-
-            </div>
-        </div>
-        <div class="banner-btm-bottom">
-            <div class="banner-btm-inner a6">
-
-            </div>
-            <div class="banner-btm-inner a4">
-                <div class="blog_date">
-
-                    <h4>Jan.05.2018</h4>
+            <div class="banner-btm-bottom">
+                <div class="banner-btm-inner a6">
 
                 </div>
-                <h6><a href="single.html">Strategic Planning</a></h6>
-                <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
-                <div class="clearfix"></div>
-                <a href="single.html" class="blog-btn">Know More</a>
+                <div class="banner-btm-inner a4">
+                    <div class="blog_date">
+
+                        <h4>Jan.05.2018</h4>
+
+                    </div>
+                    <h6><a href="single.html">Strategic Planning</a></h6>
+                    <p class="paragraph">Aenean orci erat, placerat id pulvinar nec, tincidunt vel eros.</p>
+                    <div class="clearfix"></div>
+                    <a href="single.html" class="blog-btn">Know More</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="clearfix"></div>
-</div>
+        <div class="clearfix"></div>
+    </div>*@
 
 <!--//blog-->
 <!--/bottom-->
@@ -406,60 +405,58 @@
 </div>
 <!--//bottom-->
 <!--/testimonials-->
-<div class="tesimonials">
+<!--<div class="tesimonials">
     <div class="container">
         <h3 class="tittle-w3ls cen">Testimonials</h3>
         <div class="inner_sec">
             <div class="test_grid_sec">
                 <div class="col-md-offset-2 col-md-8">
-                    <div class="carousel slide two" data-ride="carousel" id="quote-carousel">
-                        <!-- Bottom Carousel Indicators -->
-                        <ol class="carousel-indicators two">
-                            <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#quote-carousel" data-slide-to="1"></li>
-                            <li data-target="#quote-carousel" data-slide-to="2"></li>
-                        </ol>
+                    <div class="carousel slide two" data-ride="carousel" id="quote-carousel">-->
+<!-- Bottom Carousel Indicators -->
+<!--<ol class="carousel-indicators two">
+    <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#quote-carousel" data-slide-to="1"></li>
+    <li data-target="#quote-carousel" data-slide-to="2"></li>
+</ol>-->
+<!-- Carousel Slides / Quotes -->
+<!--<div class="carousel-inner">-->
+<!-- Quote 1 -->
+<!--<div class="item active">
+    <blockquote>
+        <div class="test_grid">
+            <div class="col-sm-3 text-center test_img">
+                <img src="images/t1.jpg" class="img-responsive" alt="">
 
-                        <!-- Carousel Slides / Quotes -->
-                        <div class="carousel-inner">
-
-                            <!-- Quote 1 -->
-                            <div class="item active">
-                                <blockquote>
-                                    <div class="test_grid">
-                                        <div class="col-sm-3 text-center test_img">
-                                            <img src="images/t1.jpg" class="img-responsive" alt="">
-
-                                        </div>
-                                        <div class="col-sm-9 test_img_info">
-                                            <p>
-                                                Maecenas quis neque libero. Class aptent taciti.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                                                auctor nec lacus ut tempor. Mauris.
-                                            </p>
-                                            <h6>Sara Lisbon</h6>
-                                        </div>
-                                    </div>
-                                </blockquote>
-                            </div>
-                            <!-- Quote 2 -->
-                            <div class="item">
-                                <blockquote>
-                                    <div class="test_grid">
-                                        <div class="col-sm-3 text-center test_img">
-                                            <img src="images/t2.jpg" class="img-responsive" alt="">
-                                        </div>
-                                        <div class="col-sm-9 test_img_info">
-                                            <p>
-                                                Lorem ipsum dolor sit amet. Class aptent taciti.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                                                auctor nec lacus ut tempor. Mauris.
-                                            </p>
-                                            <h6>Jane Wearne</h6>
-                                        </div>
-                                    </div>
-                                </blockquote>
-                            </div>
-                            <!-- Quote 3 -->
-                            <div class="item">
+            </div>
+            <div class="col-sm-9 test_img_info">
+                <p>
+                    Maecenas quis neque libero. Class aptent taciti.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                    auctor nec lacus ut tempor. Mauris.
+                </p>
+                <h6>Sara Lisbon</h6>
+            </div>
+        </div>
+    </blockquote>
+</div>-->
+<!-- Quote 2 -->
+<!--<div class="item">
+    <blockquote>
+        <div class="test_grid">
+            <div class="col-sm-3 text-center test_img">
+                <img src="images/t2.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-sm-9 test_img_info">
+                <p>
+                    Lorem ipsum dolor sit amet. Class aptent taciti.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                    auctor nec lacus ut tempor. Mauris.
+                </p>
+                <h6>Jane Wearne</h6>
+            </div>
+        </div>
+    </blockquote>
+</div>-->
+<!-- Quote 3 -->
+<!--<div class="item">
                                 <blockquote>
                                     <div class="test_grid">
                                         <div class="col-sm-3 text-center test_img">
@@ -482,7 +479,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 <!--//testimonials-->
 <!-- /newsletter-->
 <div class="newsletter_w3ls_agileits">
