Home page changes

--- a/RightSolutions4u/RightSolutions4u/Views/Home/Index.cshtml
+++ b/RightSolutions4u/RightSolutions4u/Views/Home/Index.cshtml
@@ -107,12 +107,12 @@
                 <div class="col-md-3 ser-first-grid text-center">
                     <span class="fa fa-star" aria-hidden="true"></span>
                     <h3>Databases</h3>
-                    <p>We are offering Database Backend Development, Database Optimization, Datbase Migration and Database Mergin. </p>
+                    <p>We are offering Database Backend Development, Database Optimization, Database Migration and Database Merging. </p>
                 </div>
                 <div class="col-md-3 ser-first-grid text-center">
                     <span class="fa fa-thumbs-up" aria-hidden="true"></span>
-                    <h3>Artifial Intelligence</h3>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <h3>AI / Machine Learning</h3>
+                    <p>We develop different models using Artificial Intelligence that can automate your business and lead to the new trends of the world. We also help in shifting conventional solutions to smart solutions which helps organizations to solve for a variety of real-world problems at scale.</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -127,8 +127,10 @@
         <h3 class="tittle-w3ls we">We provide high quality and cost effective offshore web development services.</h3>
 
         <p>
-            Lorem ipsum dolor sit amet, do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            With competitive pricing and excellent services, we are the leading
+            offshore web development company. Since 2019, we
+            have delivered a wide range of website design and
+            development projects to our clients worldwide.
         </p>
 
 
@@ -243,7 +245,7 @@
                 </li>
 
 
-@*                <li class="portfolio-item2" data-id="id-5" data-type="cat-item-2">
+                <li class="portfolio-item2" data-id="id-5" data-type="cat-item-2">
                     <div>
                         <span class="image-block">
                             <a class="image-zoom" href="images/g6.jpg" rel="prettyPhoto[gallery]">
@@ -258,39 +260,39 @@
                     </div>
                 </li>
 
+                @*
+        <li class="portfolio-item2" data-id="id-6" data-type="cat-item-1">
+            <div>
+                <span class="image-block">
+                    <a class="image-zoom" href="images/g7.jpg" rel="prettyPhoto[gallery]">
 
-                <li class="portfolio-item2" data-id="id-6" data-type="cat-item-1">
-                    <div>
-                        <span class="image-block">
-                            <a class="image-zoom" href="images/g7.jpg" rel="prettyPhoto[gallery]">
-
-                                <img src="images/g7.jpg" class="img-responsive" alt="RightSolutions4u">
-                                <div class="port-info">
-                                    <h5>View Project</h5>
-                                    <p>Add Some Description</p>
-                                </div>
-                            </a>
-                        </span>
-                    </div>
-                </li>
+                        <img src="images/g7.jpg" class="img-responsive" alt="RightSolutions4u">
+                        <div class="port-info">
+                            <h5>View Project</h5>
+                            <p>Add Some Description</p>
+                        </div>
+                    </a>
+                </span>
+            </div>
+        </li>
 
 
-                <li class="portfolio-item2" data-id="id-7" data-type="cat-item-1">
-                    <div>
-                        <span class="image-block">
-                            <a class="image-zoom" href="images/g8.jpg" rel="prettyPhoto[gallery]">
+        <li class="portfolio-item2" data-id="id-7" data-type="cat-item-1">
+            <div>
+                <span class="image-block">
+                    <a class="image-zoom" href="images/g8.jpg" rel="prettyPhoto[gallery]">
 
-                                <img src="images/g8.jpg" class="img-responsive" alt="RightSolutions4u">
-                                <div class="port-info">
-                                    <h5>View Project</h5>
-                                    <p>Add Some Description</p>
-                                </div>
+                        <img src="images/g8.jpg" class="img-responsive" alt="RightSolutions4u">
+                        <div class="port-info">
+                            <h5>View Project</h5>
+                            <p>Add Some Description</p>
+                        </div>
 
-                            </a>
-                        </span>
-                    </div>
-                </li>
-*@
+                    </a>
+                </span>
+            </div>
+        </li>
+                *@
                 <div class="clearfix"></div>
             </ul>
             <!--end portfolio-area -->
