--- a/RightSolutions4u/RightSolutions4u/Views/Shared/_Layout.cshtml
+++ b/RightSolutions4u/RightSolutions4u/Views/Shared/_Layout.cshtml
@@ -225,15 +225,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="col-md-3 sign-gd flickr-post">
                         <h4>Our <span>Works</span></h4>
                         <ul>
-                            <li><a href="single.html"><img src="~/images/g1.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g2.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g3.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g4.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g5.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g6.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g7.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g8.jpg" alt=" " class="img-responsive" /></a></li>
-                            <li><a href="single.html"><img src="~/images/g4.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/zaxmonlogo.jpeg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/avioproLogo.png" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g3.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g4.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g5.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g6.jpg" alt=" " class="img-responsive" /></a></li>
+                            @*<li><a href="#"><img src="~/images/g7.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g8.jpg" alt=" " class="img-responsive" /></a></li>
+                            <li><a href="#"><img src="~/images/g4.jpg" alt=" " class="img-responsive" /></a></li>*@
                         </ul>
                     </div>
                     <div class="col-md-5 sign-gd-two">
